--- a/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
@@ -68,8 +68,8 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.17
 _srcname=linux
-pkgver=4.17.11.0.g84d52eb065f1.rev10
-pkgrel=2
+pkgver=4.17.12.0.g506f6fba2696.rev11
+pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -78,7 +78,7 @@ makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/actual"
 _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
 _lucjanname='lucjan'
-_lucjanrev='rev10'
+_lucjanrev='rev11'
 _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
 _pkgrel=${_lucjanrev}-${pkgrel}
 
@@ -406,7 +406,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'f5e4185dbaf10fb48ae7ece04cf6de4f31bea0452d00b7efcf79ac6e45ae9486baeb9bbe21478721633758dd8d8f66059bd28eaa2ee434211b4b58e89ec57717'
+            'f4ba646d60d9f194036fdb11f6c151bbdb9bbfe8b976c4398e748b0572463d4553fb845137591621edd9f0d4151598840b66e593469cb7d906437d850b4a8405'
             '9baef8e9cca2450ce7d247bcfc91bb9d7971b61e8c7d7bbae338749c94682b98117fd0f87b09eed0e899ebf81629573de31233c403b99ee83da30c7d90e869da'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
