--- a/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -68,8 +68,8 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.17
 _srcname=linux-stable-rc
-pkgver=4.17.12.0.g506f6fba2696.rev11
-pkgrel=2
+pkgver=4.17.12.32.g53a78f536196.rev11
+pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -108,8 +108,13 @@ pkgver() {
 prepare() {
     cd "${_srcname}"
     
+    ### Fix naming schema in EXTRAVERSION
+        _rc="$(cat Makefile | grep -m1 -e EXTRAVERSION | grep -o "[[:digit:]]*")"
+        msg2 "Fix naming schema in EXTRAVERSION"
+        sed -i -e "s|EXTRAVERSION = -rc${_rc}|EXTRAVERSION =|g" ./Makefile
+    
     ### Patch source with linux-lucjan
-        msg "Patching source with linux-lucjan"
+        msg2 "Patching source with linux-lucjan"
         patch -Np1 -i ../${_lucjanpatch}
     
     ### Setting version
