--- a/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -69,7 +69,7 @@ _pkgbase=linux-lucjan
 _major=4.17
 _srcname=linux-stable-rc
 pkgver=4.17.12.32.g53a78f536196.rev11
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -80,7 +80,6 @@ _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
 _lucjanname='lucjan'
 _lucjanrev='rev11'
 _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
-_pkgrel=${_lucjanrev}-${pkgrel}
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_lucjanpatch}"
@@ -111,17 +110,24 @@ prepare() {
     ### Fix naming schema in EXTRAVERSION
         _rc="$(cat Makefile | grep -m1 -e EXTRAVERSION | grep -o "[[:digit:]]*")"
         msg2 "Fix naming schema in EXTRAVERSION"
-        sed -i -e "s|EXTRAVERSION = -rc${_rc}|EXTRAVERSION =|g" ./Makefile
-    
-    ### Patch source with linux-lucjan
-        msg2 "Patching source with linux-lucjan"
-        patch -Np1 -i ../${_lucjanpatch}
-    
+        sed -i -e "s|EXTRAVERSION = -rc${_rc}|EXTRAVERSION =|g" Makefile
+     
     ### Setting version
         msg2 "Setting version..."
+        sed -e "/^EXTRAVERSION =/s/=.*/= .${_lucjanrev}/" -i Makefile
         scripts/setlocalversion --save-scmversion
-        echo ".$_pkgrel" > localversion.10-pkgrel
+        echo "-$pkgrel" > localversion.10-pkgrel
         echo "$_kernelname" > localversion.20-pkgname
+    
+    ### Patching sources
+        local src
+        for src in "${source[@]}"; do
+          src="${src%%::*}"
+          src="${src##*/}"
+          [[ $src = *.patch ]] || continue
+          msg2 "Applying patch $src..."
+          patch -Np1 < "../$src"
+        done
     
     ### Setting config   
         msg2 "Setting config..."
