--- a/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
@@ -69,7 +69,7 @@ _pkgbase=linux-lucjan
 _major=4.17
 _srcname=linux
 pkgver=4.17.12.0.g506f6fba2696.rev11
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -80,7 +80,6 @@ _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
 _lucjanname='lucjan'
 _lucjanrev='rev11'
 _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
-_pkgrel=${_lucjanrev}-${pkgrel}
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_lucjanpatch}"
@@ -108,15 +107,22 @@ pkgver() {
 prepare() {
     cd "${_srcname}"
     
-    ### Patch source with linux-lucjan
-        msg2 "Patching source with linux-lucjan"
-        patch -Np1 -i ../${_lucjanpatch}
-    
     ### Setting version
         msg2 "Setting version..."
+        sed -e "/^EXTRAVERSION =/s/=.*/= .${_lucjanrev}/" -i Makefile
         scripts/setlocalversion --save-scmversion
-        echo ".$_pkgrel" > localversion.10-pkgrel
+        echo "-$pkgrel" > localversion.10-pkgrel
         echo "$_kernelname" > localversion.20-pkgname
+    
+    ### Patching sources
+        local src
+        for src in "${source[@]}"; do
+          src="${src%%::*}"
+          src="${src##*/}"
+          [[ $src = *.patch ]] || continue
+          msg2 "Applying patch $src..."
+          patch -Np1 < "../$src"
+        done
     
     ### Setting config   
         msg2 "Setting config..."
