--- a/linux-lqx-rebranded/linux-lqx/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx/PKGBUILD
@@ -55,11 +55,11 @@ pkgbase=linux-lqx
 # pkgname=('linux-lqx' 'linux-lqx-headers' 'linux-lqx-docs')
 _major=4.17
 _minor=17
-pkgver=4.17.17_2
+pkgver=4.17.17_3
 _srcname=linux-${_major}
 pkgrel=1
 _lqxpatchname=liquorix-package
-_lqxpatchrel=12
+_lqxpatchrel=13
 _lqxpatchver=${_lqxpatchname}-${_major}-${_lqxpatchrel}
 arch=('x86_64')
 url="http://liquorix.net/"
@@ -77,8 +77,7 @@ source=("https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
          # pacman hook for remove initramfs
         '99-linux.hook'
          # standard config files for mkinitcpio ramdisk
-        'linux.preset'
-        '0002-Increase-timeout-in-lspcon_wait_mode.patch')
+        'linux.preset')
 
 _kernelname=${pkgbase#linux}
 : ${_kernelname:=-lqx} 
@@ -370,12 +369,11 @@ done
 
 sha512sums=('4d9de340a26155a89ea8773131c76220cc2057f2b5d031b467b60e8b14c1842518e2d60a863d8c695f0f7640f3f18d43826201984a238dade857b6cef79837db'
             'SKIP'
-            'c8e00132c2d51f2e86811fde1825294d1b62537277933473e357e6e3f63ba3e23d51432992aae0122d1ea78cd1da1da74a081bef82181ad8dfd03056eed5e4b3'
+            'd583a6d16fdf7dff35de1fc18407c1786be4dc89c68321ddbd25b426788cc20d96686da0917b17af7d34b199744dc372af192da8dd1c26edd83c6b1a10d28839'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
-            '2dc6b0ba8f7dbf19d2446c5c5f1823587de89f4e28e9595937dd51a87755099656f2acec50e3e2546ea633ad1bfd1c722e0c2b91eef1d609103d8abdc0a7cbaf'
-            '38e3d30fba9ec7faa2e7ef2bc13f054fe30d863192d340c45b1e5624716617b21fe825537cefb00c5257f31f77e7050175ad098b9bbc0f29359bf1b7487e5afd')
+            '2dc6b0ba8f7dbf19d2446c5c5f1823587de89f4e28e9595937dd51a87755099656f2acec50e3e2546ea633ad1bfd1c722e0c2b91eef1d609103d8abdc0a7cbaf')
             
 validpgpkeys=(
               'ABAF11C65A2970B130ABE3C479BE3E4300411886' # Linux Torvalds
