--- a/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable/linux-juliagoda-git/PKGBUILD
@@ -68,7 +68,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.18
 _srcname=linux
-pkgver=4.18.3.0.g8a8c540db3ff.ll5
+pkgver=4.18.4.0.g28b2837b7236.ll7
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -78,7 +78,7 @@ makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git' 'python-sphinx' 'graphviz')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/actual"
 _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
 _lucjanname='lucjan'
-_lucjanrev='ll5'
+_lucjanrev='ll7'
 _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=linux-${_major}.y"
@@ -429,7 +429,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '2cc49c38e17144dc07de21a79ec23110211282183b01be1f2bd4bb8555845734af1e676d90f94b453ae9efac94fbb2d55bce8825bcd03e6f00380cd9afe44bd6'
+            'd1587beb70a051ed5b128fe9639f343d248f280751679178dee37b721730ae5f59c0efdea43b7ce19288ef3b76d48236922fac5ad516272c5273d60cfd7d681b'
             'cae7dcbae7500b810095c255d9143400aade62ed4ebaf111a0dfdde60af30b70892522a62e6ee95e97098368921bf9ba7a0bfb1eb54baa372d591154967a9c94'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
