--- a/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/linux-juliagoda/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -68,7 +68,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.18
 _srcname=linux-stable-rc
-pkgver=4.18.6.146.g778167eee1b9.ll16
+pkgver=4.18.7.0.g8ea7eadbef2f.ll16
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -78,18 +78,18 @@ makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'git' 'python-sphinx' 'graphviz')
 
 ### linux-lucjan stable
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/actual"
-# _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
-# _lucjanname='lucjan'
-# _lucjanrev='ll15'
-# _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
-
-### linux-lucjan rc
-_lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/testing"
-_lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/testing"
+_lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/actual"
 _lucjanname='lucjan'
 _lucjanrev='ll16'
-_lucjanrc='rc1'
-_lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
+_lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
+
+### linux-lucjan rc
+# _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/testing"
+# _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/testing"
+# _lucjanname='lucjan'
+# _lucjanrev='ll16'
+# _lucjanrc='rc1'
+# _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_lucjanpatch}"
