--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -66,7 +66,7 @@ _1k_HZ_ticks=y
 # ATTENTION - one of two predefined values should be selected!
 # 'actual' - stable releases (recommended)
 # 'testing' - rc releases (active only temporarily)
-_linux_lucjan=testing
+_linux_lucjan=actual
 
 ### Do not edit below this line unless you know what you're doing
 
@@ -76,7 +76,7 @@ _pkgbase=linux-lucjan
 _major=4.20
 _srcname=linux-stable-rc
 pkgver=4.20.r0.g8fe28cb58bcb.ll1
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
