--- a/Devel/Config/4.19/src/rt-bfq/config
+++ b/Devel/Config/4.19/src/rt-bfq/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 4.19.5-arch1 Kernel Configuration
+# Linux/x86 4.19.11-arch1 Kernel Configuration
 #
 
 #
@@ -102,6 +102,7 @@ CONFIG_PREEMPT_COUNT=y
 CONFIG_VIRT_CPU_ACCOUNTING=y
 CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_HAVE_SCHED_AVG_IRQ=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
 CONFIG_TASKSTATS=y
@@ -3491,6 +3492,7 @@ CONFIG_MWL8K=m
 CONFIG_WLAN_VENDOR_MEDIATEK=y
 CONFIG_MT7601U=m
 CONFIG_MT76_CORE=m
+CONFIG_MT76_LEDS=y
 CONFIG_MT76_USB=m
 CONFIG_MT76x2_COMMON=m
 CONFIG_MT76x0U=m
