--- a/juliagoda-kernels/stable/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable/linux-juliagoda-git/PKGBUILD
@@ -74,7 +74,7 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=4.20
 _srcname=linux
-pkgver=4.20.8.r0.g0788acb1a3ed.ll28
+pkgver=4.20.10.r0.g7f600870eca5.ll28
 pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -120,7 +120,7 @@ _kernelname=${pkgbase#linux}
 pkgver() {
     cd "${_srcname}"
 
-    _ver="$(git describe --long --tags | sed -E 's/^v//;s/([^-]*-g)/r\1/;s/-/./g;s/\.rc/rc/')"
+    _ver="$(git describe --long --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g')"
     printf ${_ver}.${_lucjanrev}
 }
 
