--- a/Devel/Config/5.0/git/lucjan-git/config
+++ b/Devel/Config/5.0/git/lucjan-git/config
@@ -454,6 +454,7 @@ CONFIG_SECCOMP=y
 # CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
 CONFIG_HZ_300=y
+# CONFIG_HZ_750 is not set
 # CONFIG_HZ_1000 is not set
 CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
