--- a/juliagoda-kernels/trunk/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/trunk/linux-juliagoda-git/PKGBUILD
@@ -69,8 +69,8 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=5.0
 _srcname=linux-stable-rc
-pkgver=5.0.r17.g4b26bbfb55b6.ll1
-pkgrel=2
+pkgver=5.0.r47.gbe3f50196584.ll1
+pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
@@ -90,7 +90,7 @@ elif [ "$_linux_lucjan" = "testing" ]; then
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/testing"
  _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/testing"
  _lucjanname='lucjan'
- _lucjanrev='ll34'
+ _lucjanrev='ll46'
  _lucjanrc='rc1'
  _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
 
@@ -100,7 +100,7 @@ elif [ "$_linux_lucjan" = "trunk" ]; then
  _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/trunk"
  _lucjanname='lucjan'
  _lucjanrev='ll1'
- _lucjanrc='rc5'
+ _lucjanrc='rc6'
  _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}-${_lucjanrc}.patch"
 
 fi
@@ -444,7 +444,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '7ce1da928728dcafedfd63919f609819774a36e54d9c4d564fc51bf1d086b7291b6968a29bac2e4616b267133e77a253ce6cc020c92024c83de58cb8ae80d672'
+            '8b59dbe2a139bf1d394f76fbd58de5665182974e6291b4dbf52a401b0ae667c6e6d5b404a7d45c623368d6613f583f43fd0c7e94790b414f0dd4d0b7b6243ccc'
             'SKIP'
             'ab018af5664b313838f54dfbc5b40a67266becb1101eecfa0f9275c7478b1de4c8fe6eab2022a1471a3bda99166d530153acb6532299fc1da98a0ee957682a20'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
